tests/ui/issues/issue-25901.stderr
error[E0658]: cannot call conditionally-const method `<A as Deref>::deref` in statics
  --> $DIR/issue-25901.rs:4:24
   |
LL | static S: &'static B = &A;
   |                        ^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
